Fix some CSS layout issues

--- a/dmtoolkit/modules/kibbles/static/kibbles.css
+++ b/dmtoolkit/modules/kibbles/static/kibbles.css
@@ -8,6 +8,8 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
+    flex: 1 1 0;
+    min-height: 0px;
 }
 
 #recipe-statblock {
